# calculator

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/job/: eval.rs  lex.rs  mod.rs  parse.rs  parse_trash.txt
tests/: perform_tests.rs
