[package]
name = "calc"
version = "0.1.0"
authors = ["tema3210 <play.aab.25122001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.9"
iced = "0.1.1"
iced_native = "0.2.2"
